# dickminer

./: .gitignore  LICENSE  README.MD  dickminer.cabal  specs.org
api/: Main.hs
app/: Main.hs
src/: Dickmine.hs
src/Dickmine/: IO.hs  Parse.hs  Query.hs  Serialize.hs  Types.hs
test/: Spec.hs
test/Dickmine/: ParseSpec.hs  SerializeSpec.hs
