name:                dickminer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dickmine
                     , Dickmine.Types
                     , Dickmine.Parse
                     , Dickmine.IO
                     , Dickmine.Query
  build-depends:       base >= 4.7 && < 5
                     , time
                     , old-locale
                     , aeson
                     , transformers
                     , pipes
  default-language:    Haskell2010

executable dickminer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  build-depends:       base
                     , dickminer
                     , aeson
                     , pipes
  default-language:    Haskell2010

executable dickminer-api
  hs-source-dirs:      api
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dickminer
                     , aeson
                     , pipes
                     , scotty
                     , time
                     , wai-extra
  default-language:    Haskell2010

test-suite dickminer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dickminer
                     , hspec
                     , time
                     , old-locale
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
